change little to orbit

--- a/config/index.html
+++ b/config/index.html
@@ -18,12 +18,12 @@
   </head>
 
   <body>
-    <h1 class='title'>Slate Example Configuration</h1>
+    <h1 class='title'>OrbitNG Config</h1>
 
     <div class='item-container'>
       <div class='item-container-content'>
         <div class='item'>
-          Use this configuration page to choose the settings you would like applied to this app.
+          Use this configuration page to choose the settings you would like applied to OrbitNG.
         </div>
       </div>
     </div>
