--- a/config/index.html
+++ b/config/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <title>OrbitNG</title>
-  <!--- taken from SLATE ---->
+  <!--- taken from SLATE -->
   <link rel='stylesheet' type='text/css' href='css/slate.min.css'>
   <script src='js/slate.min.js'></script>
   <style>
@@ -68,7 +68,7 @@
  
     var options = {
      // 'background_color': backgroundColorPicker.value,
-      'date': datetCheckbox.checked
+      'date': dateCheckbox.checked
     };
 
     // Save for next launch
