--- a/config/index.html
+++ b/config/index.html
@@ -47,7 +47,7 @@
       <div class='item-container-content'>
         <label class='item'>
           Display Date 
-          <input id='high_contrast_checkbox' type='checkbox' class='item-toggle'>
+          <input id='date_checkbox' type='checkbox' class='item-toggle'>
         </label>
       </div>
       <div class='item-container-footer'>
