--- a/config/index.html
+++ b/config/index.html
@@ -64,7 +64,7 @@
   <script>
   function getConfigData() {
     
-    var highContrastCheckbox = document.getElementById('date_checkbox');
+    var dateCheckbox = document.getElementById('date_checkbox');
  
     var options = {
      // 'background_color': backgroundColorPicker.value,
