--- a/config/index.html
+++ b/config/index.html
@@ -106,7 +106,7 @@
 
     // Load any previously saved configuration, if available
     if(localStorage['date']) {
-      highContrastCheckbox.checked = JSON.parse(localStorage['date']);
+      dateCheckbox.checked = JSON.parse(localStorage['date']);
      // backgroundColorPicker.value = localStorage['background_color'];
     }
   })();
