--- a/config/index.html
+++ b/config/index.html
@@ -80,7 +80,7 @@
     
     var options = {
      // 'background_color': backgroundColorPicker.value,
-      'date': dateCheckbox.checked
+      'date': dateCheckbox.checked,
       'btvib': btvib_checkbox.checked
     };
 
