add font bold and invert

--- a/config/index.html
+++ b/config/index.html
@@ -76,9 +76,21 @@
           Earth Color
           <input id='earth_color_picker' type='text' class='item-color item-color-sunny' value='#000000'>
         </label>
+        <label class='item'>
+          Invert Earths Fontcolor
+          <input id='earth_font_invert_checkbox' type='checkbox' class='item-toggle'>
+        </label>
          <label class='item'>
+          Bold Earth Font
+          <input id='earth_font_bold_checkbox' type='checkbox' class='item-toggle'>
+        </label>
+        <label class='item'>
           Moon Color
           <input id='moon_color_picker' type='text' class='item-color item-color-sunny' value='#000000'>
+        </label>
+         <label class='item'>
+          Invert Moons Fontcolor
+          <input id='moon_font_invert_checkbox' type='checkbox' class='item-toggle'>
         </label>
       </div>
       <div class='item-container-footer'>
@@ -86,12 +98,6 @@
       </div>
     </div>
 
-
-
-
-
-
-   
     <div class='item-container'>
       <div class='button-container'>
         <input id='submit_button' type='button' class='item-button' value='SUBMIT'>
@@ -103,6 +109,7 @@
     
     var dateCheckbox = document.getElementById('date_checkbox');
     var btvib_checkbox = document.getElementById('btvib_checkbox');
+    var 
     
     var options = {
      // 'background_color': backgroundColorPicker.value,
