--- a/config/index.html
+++ b/config/index.html
@@ -109,10 +109,14 @@
     
     var dateCheckbox = document.getElementById('date_checkbox');
     var btvib_checkbox = document.getElementById('btvib_checkbox');
-    var 
+    var backgroundColorPicker = document.getElementById('background_color_picker');
+    var earthColorPicker = document.getElementById('earth_color_picker');
+    var moonColorPicker = document.getElementById('moon_color_picker');
+    var earthFontBoldCheckbox = document.getElementById('earth_font_bold_checkbox');
+    var earthFontInvertCheckbox = document.getElementById('earth_font_invert_checkbox');
     
     var options = {
-     // 'background_color': backgroundColorPicker.value,
+      'background_color': backgroundColorPicker.value,
       'date': dateCheckbox.checked,
       'btvib': btvib_checkbox.checked
     };
