--- a/config/index.html
+++ b/config/index.html
@@ -175,7 +175,7 @@
     var moonFontInvertCheckbox = document.getElementById('moon_font_invert_checkbox');
     
     // Load any previously saved configuration, if available
-    if(localStorage['date']) {
+    if(localStorage['moonFontInvert']) {
      dateCheckbox.checked = JSON.parse(localStorage['date']);
      btvib_checkbox.checked = JSON.parse(localStorage['btvib']);
      backgroundColorPicker.value = JSON.parse(localStorage['backgroundColor']);
