--- a/config/index.html
+++ b/config/index.html
@@ -181,9 +181,9 @@
      backgroundColorPicker.value = JSON.parse(localStorage['backgroundColor']);
      earthColorPicker.value = JSON.parse(localStorage['earthColor']);
      moonColorPicker.value = JSON.parse(localStorage['moonColor']);
-     earthFontBoldCheckbox.checked = JSON.parse(localStorage['earthFontBoldCheckbox']);
-     earthFontInvertCheckbox.checked = JSON.parse(localStorage['earthFontInvertCheckbox']);
-     moonFontInvertCheckbox.checked = JSON.parse(localStorage['moonFontInvertCheckbox']);
+     earthFontBoldCheckbox.checked = JSON.parse(localStorage['earthFontBold']);
+     earthFontInvertCheckbox.checked = JSON.parse(localStorage['earthFontInvert']);
+     moonFontInvertCheckbox.checked = JSON.parse(localStorage['moonFontInvert']);
     }
   })();
   </script>
