--- a/config/index.html
+++ b/config/index.html
@@ -70,11 +70,11 @@
       <div class='item-container-content'>
         <label class='item'>
           Background Color
-          <input id='background_color_picker' type='text' class='item-color item-color-sunny' value='0x000000'>
+          <input id='background_color_picker' type='text' class='item-color item-color-sunny' value='#000000'>
         </label>
          <label class='item'>
           Earth Color
-          <input id='earth_color_picker' type='text' class='item-color item-color-sunny' value='0x000000'>
+          <input id='earth_color_picker' type='text' class='item-color item-color-sunny' value='#000000'>
         </label>
         <label class='item'>
           Invert Earths Fontcolor
@@ -86,7 +86,7 @@
         </label>
         <label class='item'>
           Moon Color
-          <input id='moon_color_picker' type='text' class='item-color item-color-sunny' value='0x000000'>
+          <input id='moon_color_picker' type='text' class='item-color item-color-sunny' value='#000000'>
         </label>
          <label class='item'>
           Invert Moons Fontcolor
