--- a/config/index.html
+++ b/config/index.html
@@ -164,7 +164,7 @@
   });
 
   (function() {
-    
+    console.log('loading');
     var dateCheckbox = document.getElementById('date_checkbox');
     var btvib_checkbox = document.getElementById('btvib_checkbox');
     var backgroundColorPicker = document.getElementById('background_color_picker');
