--- a/config/index.html
+++ b/config/index.html
@@ -71,11 +71,11 @@
       <div class='item-container-content'>
         <label class='item'>
           Background Color
-          <input id='background_color_picker' type='text' class='item-color item-color-sunny' value='000000'>
+          <input id='background_color_picker' type='text' class='item-color item-color-sunny' value='0x000000'>
         </label>
          <label class='item'>
           Earth Color
-          <input id='earth_color_picker' type='text' class='item-color item-color-sunny' value='000000'>
+          <input id='earth_color_picker' type='text' class='item-color item-color-sunny' value='0x000000'>
         </label>
         <label class='item'>
           Invert Earths Fontcolor
@@ -87,7 +87,7 @@
         </label>
         <label class='item'>
           Moon Color
-          <input id='moon_color_picker' type='text' class='item-color item-color-sunny' value='000000'>
+          <input id='moon_color_picker' type='text' class='item-color item-color-sunny' value='0x000000'>
         </label>
          <label class='item'>
           Invert Moons Fontcolor
